--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,2 @@
-prep:
-  script: "apt-get update && apt-get install -y g++ make"
-
-compile:
-  script: "make"
+build:
+  script: "apt-get update && apt-get install -y g++ make && make"
