--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,6 @@
 build:
   script: "apt-get update &> /dev/null && \
            apt-get install -y g++ git make &> /dev/null && \
-           git submodule update --init && make && ./slwhttp --help"
+           git submodule update --init && \
+           make clean all && \
+           ./slwhttp --help"
