--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
+      - build-essential
       - g++-4.9
 
-script: "make CXX=g++-4.9 clean all && \
-         ./slwhttp --help"
+script: "./configure && \
+         make install && \
+         slwhttp --help"
