--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ build:
   script: "apt-get update &> /dev/null && \
            apt-get install -y build-essential &> /dev/null && \
            git submodule update --init && \
+           ./autogen.sh && \
            ./configure && \
            make install && \
            slwhttp --help"
