--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - build-essential
+      - autoconf
+      - automake
       - g++-4.9
+      - libtool
 
 script: "./autogen.sh && \
          ./configure CXX=g++-4.9 && \
