--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ compiler: g++-4.9
 sudo: required
 dist: trusty
 
-script: "apt-get update &> /dev/null && \
-         apt-get install -y autoconf automake g++ git libtool make && \
+script: "sudo apt-get update &> /dev/null && \
+         sudo apt-get install -y autoconf automake g++ git libtool make && \
          git submodule update --init && \
          ./autogen.sh && \
          ./configure && \
