install the binary using root privs

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ script: "sudo apt-get update &> /dev/null && \
          git submodule update --init && \
          ./autogen.sh && \
          ./configure && \
-         make install && \
+         sudo make install && \
          slwhttp --help"
