--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 AUTOMAKE_OPTIONS = foreign
 ACLOCAL_AMFLAGS  = -I m4
 SUBDIRS          = src
-EXTRA_DIST       = autogen.sh
+EXTRA_DIST       = autogen.sh src/ext/File/File.hpp src/ext/Utility/Utility.hpp
