--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,15 @@ language: cpp
 compiler: g++
 # Require sudo for setuid
 sudo: required
+# Require trusty for decent compiling environment
+dist: trusty
 # Install extra packages
-addons:
-  apt:
-    sources:
-    # add PPAs with more up-to-date toolchains
-    - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.6
-    packages:
-    # install toolchains
-    - autoconf
-    - automake
-    - gcc-5
-    - g++-5
-    - libtool
-    - make
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+install:
+  - sudo apt-get install -qq g++-5
+  - export CXX="g++-5"
 # Build steps
 script:
   - pwd
