--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 # Enable C++ support
 language: cpp
 # Compiler selection
-compiler: g++-5
+compiler: g++
 # Require sudo for setuid
 sudo: required
 # Require trusty for decent compiling environment
